# macroquad

./: Cargo.toml  DefaultFont_atlas.json  markup_line_width_example.rs
examples/: 3d.rs  arkanoid.rs  asteroids.rs  camera_transformations.rs  custom_material.rs  default_font.rs  first_person.rs  letterbox.rs  particles_example.rs  platformer.rs  raw_miniquad.rs  rustaceanmark.rs  shadertoy.rs  snake.rs  text.rs  text_measures.rs  tree.rs  ui.rs  ui_skins.rs
src/: camera.rs  color.rs  error.rs  exec.rs  input.rs  lib.rs  material.rs  math.rs  models.rs  prelude.rs  quad_gl.rs  shapes.rs  telemetry.rs  text.rs  texture.rs  time.rs  tobytes.rs  ui.rs  window.rs
src/experimental/: animation.rs  coroutines.rs  scene.rs  state_machine.rs
src/experimental/collections/: storage.rs
src/experimental/coroutines/: generational_storage.rs
src/math/: rect.rs
src/text/: atlas.rs
src/ui/: canvas.rs  cursor.rs  style.rs
src/ui/render/: mesh_rasterizer.rs  painter.rs
src/ui/widgets/: button.rs  checkbox.rs  combobox.rs  drag.rs  editbox.rs  group.rs  input.rs  label.rs  separator.rs  slider.rs  tabbar.rs  tree_node.rs  window.rs
src/ui/widgets/editbox/: text_editor.rs
tests/: back_to_the_future.rs
