[package]
name = "macroquad"
version = "0.4.14"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/not-fl3/macroquad"
repository = "https://github.com/not-fl3/macroquad"
description = """
Simple and easy to use graphics library
"""
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
log-rs = ["log"]
glam-serde = ["glam/serde"]
default = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
miniquad = { git = "https://github.com/VoltaSoftware/miniquad", branch = "master", features = ["log-impl"] }
#miniquad = { path = '../../miniquad', features = ["log-impl"] }

ahash = { version = "0.8.5" }
glam = { version = "0.30.3", features = ["scalar-math"] }
macroquad_macro = { version = "0.1.8", path = "macroquad_macro" }
fontdue = "0.9"
log = { version = "0.4", optional = true }
png = { version = "0.18.0" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[dev-dependencies]

[patch.crates-io]

